# unraid

./: .gitignore  VENV_SETUP.md  pyproject.toml  requirements.txt
kometa/: config.yml
kometa/collections/: movies_leaving_soon.yml  movies_tone_and_style.yml  movies_weekend.yml  raunchy_comedy.yml  seasonal.yml  seasonal_awards.yml  seasonal_christmas.yml  seasonal_halloween.yml  seasonal_valentines.yml  shows_leaving_soon.yml  shows_tone_and_style.yml  shows_trending.yml  trending_movies.yml  trending_shows.yml
kometa/overlays/files/: days_left.yml
kometa/scripts/: get_tmdb_id.py  tmdb_id.txt
radarr/lists/: tmdb_christmas.json
radarr/tmdb_lists/: christmas.txt
utils/: env_loader.py
