[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unraid-utils"          # can be any name you want
version = "0.1.0"
description = "Personal utilities and scripts"
authors = [{ name = "Chase Uebelhart" }]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["utils"]
